# miniGPT_app

./: CMakeLists.txt  README.md  api.py  gen.py  inference.py  main.cpp  model.py
include/: imguispinner.hpp
src/api/: api.py
src/app/: app.cpp  app.h
src/generation/: gen.py  inference.py
